# ICR-client

./: Cargo.toml  README.md
src/: main.rs
src/crypto/: mod.rs
src/serialization/: mod.rs
