[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.2"
tracing = "0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }